--- a/Catalog.API/Catalog.API/Catalog.API.csproj
+++ b/Catalog.API/Catalog.API/Catalog.API.csproj
@@ -7,10 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Catalog.DAL.Implementation\Catalog.DAL.Implementation.csproj" />
     <ProjectReference Include="..\Catalog.Domain.Contracts\Catalog.Domain.Contracts.csproj" />
   </ItemGroup>
 
